@@ -17,17 +17,19 @@
 package org.apache.aries.typedevent.bus.impl;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.function.Predicate;
 
 import org.osgi.framework.Filter;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-public class EventSelector {
+public class EventSelector implements Comparable<EventSelector> {
 
 	private static final Logger _log = LoggerFactory.getLogger(EventSelector.class);
+
+	private final String topicFilter;
 	
 	/** The event filter **/
 	private final Filter filter;
@@ -66,6 +68,7 @@ public class EventSelector {
 	 * @param filter
 	 */
 	public EventSelector(String topic, Filter filter) {
+		this.topicFilter = topic;
 		if(_log.isDebugEnabled()) {
 			_log.debug("Generating selector for topic {} with filter {}", topic, filter);
 		}
@@ -74,7 +77,7 @@ public class EventSelector {
 		
 		if(topic == null) {
 			// No topic matching
-			additionalSegments = Collections.emptyList();
+			additionalSegments = List.of();
 			isMultiLevelWildcard = false;
 			initial = "";
 			topicMatcher = s -> true;
@@ -90,7 +93,7 @@ public class EventSelector {
 			int singleLevelIdx = topic.indexOf('+');
 			if(singleLevelIdx < 0) {
 				initial = topic;
-				additionalSegments = Collections.emptyList();
+				additionalSegments = List.of();
 			} else {
 				initial = topic.substring(0, singleLevelIdx);
 				List<String> segments = new ArrayList<>();
@@ -104,7 +107,7 @@ public class EventSelector {
 						singleLevelIdx = nextIdx;
 					}
 				}
-				additionalSegments = Collections.unmodifiableList(segments);
+				additionalSegments = List.copyOf(segments);
 			}
 			
 			if(additionalSegments.isEmpty()) {
@@ -131,6 +134,15 @@ public class EventSelector {
 	public boolean matches(String topic, EventConverter event) {
 		// Must match the topic, and the filter if set
 		return topicMatcher.test(topic) && (filter == null || event.applyFilter(filter));
+	}
+
+	public boolean matches(String topic, Map<String, Object> event) {
+		// Must match the topic, and the filter if set
+		return topicMatcher.test(topic) && (filter == null || filter.matches(event));
+	}
+
+	public boolean matchesTopic(String topic) {
+		return topicMatcher.test(topic);
 	}
 	
 	private boolean topicMatch(String topic) {
@@ -168,8 +180,8 @@ public class EventSelector {
 			}
 		}
 		if(_log.isDebugEnabled()) {
-			_log.debug("Topic {} does not match selector with initial {} and addtionals {}", 
-					topic, initial, additionalSegments);
+			_log.debug("Topic {} does not match selector {} with initial {} and addtionals {}", 
+					topic, topicFilter, initial, additionalSegments);
 		}
 		return false;
 	}
@@ -180,5 +192,78 @@ public class EventSelector {
 	 */
 	public String getInitial() {
 		return initial;
+	}
+	
+	/**
+	 * Get the topic filter
+	 * @return
+	 */
+	public String getTopicFilter() {
+		return topicFilter;
+	}
+	
+	public boolean isWildcard() {
+		return isMultiLevelWildcard || !additionalSegments.isEmpty();
+	}
+
+	@Override
+	public int compareTo(EventSelector o) {
+		if(isWildcard()) { 
+			if(!o.isWildcard()) {
+				return 1;
+			}
+		} else if(o.isWildcard()) {
+			return -1;
+		} else {
+			return initial.compareTo(o.initial);
+		}
+		
+		int compare = tokenCount(o.initial) - tokenCount(initial);
+		
+		for(int i = 0; compare == 0 && i < additionalSegments.size(); i++) {
+			if(o.additionalSegments.size() > i) {
+				compare = tokenCount(o.additionalSegments.get(i)) - tokenCount(additionalSegments.get(i));
+			} else {
+				// other is out of segments before we are
+				return 1;
+			}
+		}
+		
+		if(compare == 0) {
+			
+			if(o.additionalSegments.size() > additionalSegments.size()) {
+				return -1;
+			}
+			
+			if(isMultiLevelWildcard) {
+				if(!o.isMultiLevelWildcard) {
+					return 1;
+				}
+			} else if(o.isMultiLevelWildcard) {
+				return -1;
+			}
+			
+			compare = initial.compareTo(o.initial);
+			
+			for(int i = 0; compare == 0 && i < additionalSegments.size(); i++) {
+				compare = additionalSegments.get(i).compareTo(o.additionalSegments.get(i));
+			}
+		}
+		
+		return compare;
+	}
+	
+	private int tokenCount(String s) {
+		int count;
+		if("/".equals(s)) {
+			count = 0;
+		} else {
+			count = 1;
+			int idx = 0;
+			while((idx = s.indexOf('/', idx + 1)) > 0) {
+				count++;
+			}
+		}
+		return count;
 	}
 }
